0.8.0/_sources/generated/statsmodels.discrete.discrete_model.ProbitResults.rst.txt
statsmodels.discrete.discrete_model.ProbitResults
=================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: ProbitResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~ProbitResults.aic
    
    
      ~ProbitResults.bic
    
    
      ~ProbitResults.bse
    
    
      ~ProbitResults.conf_int
    
    
      ~ProbitResults.cov_params
    
    
      ~ProbitResults.f_test
    
    
      ~ProbitResults.fittedvalues
    
    
      ~ProbitResults.get_margeff
    
    
      ~ProbitResults.initialize
    
    
      ~ProbitResults.llf
    
    
      ~ProbitResults.llnull
    
    
      ~ProbitResults.llr
    
    
      ~ProbitResults.llr_pvalue
    
    
      ~ProbitResults.load
    
    
      ~ProbitResults.normalized_cov_params
    
    
      ~ProbitResults.pred_table
    
    
      ~ProbitResults.predict
    
    
      ~ProbitResults.prsquared
    
    
      ~ProbitResults.pvalues
    
    
      ~ProbitResults.remove_data
    
    
      ~ProbitResults.resid_dev
    
    
      ~ProbitResults.resid_generalized
    
    
      ~ProbitResults.resid_pearson
    
    
      ~ProbitResults.resid_response
    
    
      ~ProbitResults.save
    
    
      ~ProbitResults.summary
    
    
      ~ProbitResults.summary2
    
    
      ~ProbitResults.t_test
    
    
      ~ProbitResults.tvalues
    
    
      ~ProbitResults.wald_test
    
    
      ~ProbitResults.wald_test_terms
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ProbitResults.use_t
   
   