v0.10.2/_sources/generated/statsmodels.discrete.discrete_model.ProbitResults.rst.txt
statsmodels.discrete.discrete\_model.ProbitResults
==================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: ProbitResults

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         ProbitResults.aic
         ProbitResults.bic
         ProbitResults.bse
         ProbitResults.conf_int
         ProbitResults.cov_params
         ProbitResults.f_test
         ProbitResults.fittedvalues
         ProbitResults.get_margeff
         ProbitResults.initialize
         ProbitResults.llf
         ProbitResults.llnull
         ProbitResults.llr
         ProbitResults.llr_pvalue
         ProbitResults.load
         ProbitResults.normalized_cov_params
         ProbitResults.pred_table
         ProbitResults.predict
         ProbitResults.prsquared
         ProbitResults.pvalues
         ProbitResults.remove_data
         ProbitResults.resid_dev
         ProbitResults.resid_generalized
         ProbitResults.resid_pearson
         ProbitResults.resid_response
         ProbitResults.save
         ProbitResults.set_null_options
         ProbitResults.summary
         ProbitResults.summary2
         ProbitResults.t_test
         ProbitResults.t_test_pairwise
         ProbitResults.tvalues
         ProbitResults.wald_test
         ProbitResults.wald_test_terms



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         ProbitResults.use_t

